# rk8s

./: Cargo.toml  README.md
src/: config.rs  main.rs  rk8s.rs
src/deploy/: docker.rs  etcd.rs  kube_apiserver.rs  kube_controller_manager.rs  kube_proxy.rs  kube_scheduler.rs  kubectl.rs  kubelet.rs  mod.rs  pre_check.rs  prepare_kube.rs
src/init/: etcd.rs  kube_apiserver.rs  kube_controller_manager.rs  kube_ctl.rs  kube_let.rs  kube_proxy.rs  kube_scheduler.rs  mod.rs  pre_check.rs
src/install/: cfssl.rs  docker.rs  etcd.rs  kubernetes.rs  mod.rs
src/join/: etcd.rs
